Chapter 3 mostly done
At this point, chapter 3 is close. The text needs some tweaking,
but the heap is done. I still also need to write the stub code
for the arraylist

--- a/Examples/CH1/Makefile
+++ b/Examples/CH1/Makefile
@@ -1,16 +1,22 @@
 CC=gcc
-COPTS=-Wall -Wextra -std=c11
+COPTS=-Wall -Wextra -ggdb
 
-SRC_DEREF=deref.c
 EXEC1=deref.o
+SRC_DEREF=deref.c
 
-SRC_ARITH=arith.c
 EXEC2=arith.o
+SRC_ARITH=arith.c
 
-all: deref arith
+EXEC3=hanging.o
+SRC_HANGING=hanging.c
+
+all: deref arith hanging
 
 deref:
 	$(CC) $(COPTS) -o $(EXEC1) $(SRC_DEREF)
 
 arith:
 	$(CC) $(COPTS) -o $(EXEC2) $(SRC_ARITH)
+
+hanging:
+	$(CC) $(COPTS) -o $(EXEC3) $(SRC_HANGING)
