Arraylist stub done

--- a/Examples/CH3/Makefile
+++ b/Examples/CH3/Makefile
@@ -7,10 +7,16 @@ EXEC1=vec.o
 SRC_HEAP=minheap.c
 EXEC2=heap.o
 
-all: vec heap 
+SRC_AL=arraylist.c
+EXEC3=arraylist.o
+
+all: vec heap al
 
 vec:
 	$(CC) $(COPTS) -o $(EXEC1) $(SRC_VEC)
 
 heap:
 	$(CC) $(COPTS) -o $(EXEC2) $(SRC_HEAP)
+
+al:
+	$(CC) $(COPTS) -o $(EXEC3) $(SRC_AL)
