Chapter 3 first draft done

--- a/Examples/CH2/Makefile
+++ b/Examples/CH2/Makefile
@@ -4,7 +4,13 @@ COPTS=-Wall -Wextra -std=c11
 SRC_STRING=stringstuff.c
 EXEC1=str.o
 
-all: string
+SRC_ECHO=myecho.c
+EXEC2=myecho.o
+
+all: string echo
 
 string:
 	$(CC) $(COPTS) -o $(EXEC1) $(SRC_STRING)
+
+echo:
+	$(CC) $(COPTS) -o $(EXEC2) $(SRC_ECHO)
