--- a/Examples/CH2/Makefile
+++ b/Examples/CH2/Makefile
@@ -7,10 +7,16 @@ EXEC1=str.o
 SRC_ECHO=myecho.c
 EXEC2=myecho.o
 
-all: string echo
+SRC_ARR=arr.c
+EXEC3=arr.o
+
+all: string echo arr
 
 string:
 	$(CC) $(COPTS) -o $(EXEC1) $(SRC_STRING)
 
 echo:
 	$(CC) $(COPTS) -o $(EXEC2) $(SRC_ECHO)
+
+arr:
+	$(CC) $(COPTS) -o $(EXEC3) $(SRC_ARR)
