Could possibly be finished with the first part

--- a/Examples/CH1/Makefile
+++ b/Examples/CH1/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
 COPTS=-Wall -Wextra -std=c11
 
+EXEC6=noop.o
+SRC_NOOP=noop.c
+
 EXEC5=global.o
 SRC_GLOBAL=global.c
-
-EXEC1=deref.o
-SRC_DEREF=deref.c
 
 EXEC2=arith.o
 SRC_ARITH=arith.c
@@ -16,13 +16,13 @@ SRC_HANGING=hanging.c
 SRC_EX1=ex1.c
 EXEC4=ex1.o
 
-all: global deref arith hanging ex1
+all: global arith hanging ex1
 
 global:
 	$(CC) $(COPTS) -o $(EXEC5) $(SRC_GLOBAL)
 
-deref:
-	$(CC) $(COPTS) -o $(EXEC1) $(SRC_DEREF)
+noop:
+	$(CC) $(COPTS) -o $(EXEC6) $(SRC_NOOP)
 
 arith:
 	$(CC) $(COPTS) -o $(EXEC2) $(SRC_ARITH)
